--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Shree's Portfolio</h1>
-    <h2>Intermediate Machine Learning Developer</h2>
+    <h2>Intermediate in Machine Learning</h2>
     <h2>I am learning Web Developement</h2>
     <hr>
     <a href = "./public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
